# Solana-test-task

./: Cargo.toml  README.md  justfile
client/: tsconfig.json
client/src/: app.ts  main.ts  serialization.ts
localnet/: admin.json
src/: entrypoint.rs  error.rs  instruction.rs  lib.rs  processor.rs  state.rs
tests/: integrational.rs
