[package]
name = "solana-test-task"
version = "0.1.0"
edition = "2021"

[features]
no-entrypoint = []
test-bpf = []

[dependencies]
borsh = "0.9.3"
thiserror = "1.0.25"
solana-program = "1.10.6"

[dev-dependencies]
solana-program-test = "1.10.8"
solana-sdk = "1.6.10"

[lib]
crate-type = ["cdylib", "lib"]